Added SAIC to work experience

--- a/index.html
+++ b/index.html
@@ -59,9 +59,16 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Work Experience</h2>
         <div class="w3-container">
+          <h4 class="w3-opacity"><b>SAIC Inc.</b></h4>
+          <h5 class="w3-opacity">Software Engineer SR</h5>
+          <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2022 - <span class="w3-tag w3-blue w3-round">Current</span></h6>
+          <p>Develop and maintain a wide array of ASP .NET Web Forms, MVC and API applications. Played a key role in the updating of the ASP .NET 4 application template and the creation of the ASP .NET 6 application templates used for internal products. Configured IIS settings in staging and production environments. Facilitated a transition to using Azure DevOps for source control. Piloted the transition from Waterfall to Agile development methodology.</p>
+          <hr>
+        </div>
+        <div class="w3-container">
           <h4 class="w3-opacity"><b>Telesis, a Belcan Company</b></h4>
           <h5 class="w3-opacity">ASP .Net Core / MVC Developer</h5>
-          <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - <span class="w3-tag w3-blue w3-round">Current</span></h6>
+          <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2019 - Mar 2022</h6>
           <p>Converted a custom SharePoint application to its .Net Core equivalent. Developed and maintained financial and program management software. Maintained SOCOM enterprise-wide custom SharePoint applications. Utilized the Agile software development methodology. Attended requirements meetings to gather customer wishes. Participated in peer programming and knowledge-based "brown bag" discussions.</p>
           <hr>
         </div>
