--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h4 class="w3-opacity"><b>SAIC Inc.</b></h4>
           <h5 class="w3-opacity">Software Engineer SR</h5>
           <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2022 - <span class="w3-tag w3-blue w3-round">Current</span></h6>
-          <p>Develop and maintain a wide array of ASP .NET Web Forms, MVC and API applications. Played a key role in the updating of the ASP .NET 4 application template and the creation of the ASP .NET 6 application templates used for internal products. Configured IIS settings in staging and production environments. Facilitated a transition to using Azure DevOps for source control. Piloted the transition from Waterfall to Agile development methodology.</p>
+          <p>Develop and maintain a wide array of ASP .NET Web Forms, MVC and API applications. Created the internal ASP .NET 6 application template revolving around authentication and authorization. Configured IIS settings for staging and production environments to facilitate application deployment for testing and live use. Took part in a transition to using Azure DevOps for source control and task tracking. Piloted the transition from Waterfall to Agile development methodology which increased productivity and collaboration.</p>
           <hr>
         </div>
         <div class="w3-container">
